--- a/app/src/main/res/layout/activity_main_myprofit.xml
+++ b/app/src/main/res/layout/activity_main_myprofit.xml
@@ -35,6 +35,7 @@
                     android:layout_height="55dp"
                     android:orientation="vertical"
                     >
+<!--                  new git  /-->
                     <TextView
 
                         android:layout_width="200dp"
