--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -100,7 +100,7 @@
             android:layout_height="40dp"
             android:text="calculate"
             android:textColor="#000000"
-            android:background="@drawable/lineardesing"
+            android:background="@drawable/colculate_design"
             android:textStyle="bold"
             android:layout_gravity="center"
             android:gravity="center"
