--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -27,9 +27,10 @@
             android:gravity="center"
             android:text="Full name:  "
             android:textStyle="bold"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="60dp"/>
+            android:layout_marginTop="60dp"
+            android:id="@+id/fullname"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,9 +38,10 @@
             android:gravity="center"
             android:text="Username:  "
             android:textStyle="bold"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="35dp"/>
+            android:layout_marginTop="50dp"
+            android:id="@+id/username"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -47,8 +49,9 @@
             android:gravity="center"
             android:text="Email:  "
             android:textStyle="bold"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="35dp"/>
+            android:layout_marginTop="50dp"
+            android:id="@+id/Email"/>
     </LinearLayout>
 </FrameLayout>
