--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_marginTop="20dp"
-            android:text=" חישוב BMI"
+            android:text="BMI calculation"
             android:textStyle="bold"
             android:textSize="25dp"/>
         <LinearLayout
