--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -43,7 +43,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="@drawable/edit_textback"
-                android:hint="[km]"
+                android:hint="[kg]"
                 android:gravity="center"
                 android:id="@+id/WeightET"/>
         </LinearLayout>
