--- a/app/src/main/res/layout/activity_trainig_program.xml
+++ b/app/src/main/res/layout/activity_trainig_program.xml
@@ -51,7 +51,7 @@
     <LinearLayout
         android:layout_width="390dp"
         android:layout_height="480dp"
-        android:background="@drawable/backtraining"
+        android:background="@drawable/fragment_design"
         android:layout_gravity="center">
 
         <androidx.fragment.app.FragmentContainerView
